--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62aa67">  <td>19/11/19 00:15:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestNotification@59f99ea]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="a57a9b">  <td>19/11/19 00:16:16</td>   <td>17024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNotification.setNotification()[pri:23, instance:com.dreamorbit.scripts.TestNotification@59f99ea]">setNotification</td> 
-  <td>main@1447689627</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>19/11/19 00:16:50</td>   <td>50745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestNotification@59f99ea]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1447689627</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>19/11/22 14:41:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestStar@578486a3]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>19/11/22 14:41:10</td>   <td>8066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestStar.navigationFlowCheck()[pri:25, instance:com.dreamorbit.scripts.TestStar@578486a3]">navigationFlowCheck</td> 
+  <td>main@2116908859</td>   <td></td> </tr>
+<tr bgcolor="6ecdab">  <td>19/11/22 14:41:29</td>   <td>26622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestStar@578486a3]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
 </table>
