--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c87b81">  <td>19/11/17 22:05:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestNotification@7cd62f43]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>19/11/17 22:04:34</td>   <td>-34908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestNotification@7cd62f43]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/11/17 22:04:54</td>   <td>-14907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNotification.testDecryptParticipants()[pri:23, instance:com.dreamorbit.scripts.TestNotification@7cd62f43]">testDecryptParticipants</td> 
-  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="bcd8be">  <td>19/11/22 13:03:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestStar@76505305]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="bcd8be">  <td>19/11/22 13:02:35</td>   <td>-83464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestStar@76505305]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1004023029</td>   <td></td> </tr>
+<tr bgcolor="ecb579">  <td>19/11/22 13:02:44</td>   <td>-73778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestStar.navigationFlowCheck()[pri:25, instance:com.dreamorbit.scripts.TestStar@76505305]">navigationFlowCheck</td> 
+  <td>main@1004023029</td>   <td></td> </tr>
 </table>
